src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/funcerr3.iml
// Bad argument type
def funcerr4(a : Foo) : (b) {
    a = 1;
}
